force-app/main/default/objects/NomenclatureMaintenance__c/NomenclatureMaintenance__c.object-meta.xml
<CustomObject>
    <label>Nomenclature de Maintenance</label>
    <nameField>
        <label>Nom de la Nomenclature de Maintenance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nomenclatures de Maintenance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>