force-app/main/default/objects/NomenclatureMaintenance__c/fields/MP_Date_derniere_expedition__c.field-meta.xml
<CustomField>
    <fullName>MP_Date_derniere_expedition__c</fullName>
    <label>Date de dernière expédition</label>
    <type>Date</type>
</CustomField>