force-app/main/default/objects/NomenclatureMaintenance__c/fields/NM_ContratDAssistanceTechnique__c.field-meta.xml
<CustomField>
    <fullName>NM_ContratDAssistanceTechnique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat d&apos;assistance technique</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipName>Nomenclatures_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>