force-app/main/default/objects/NomenclatureMaintenance__c/fields/NM_Equipement__c.field-meta.xml
<CustomField>
    <fullName>NM_Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>NM_Nomenclatures_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>