force-app/main/default/objects/NomenclatureMaintenance__c/fields/NM_PlanDeMaintenance__c.field-meta.xml
<CustomField>
    <fullName>NM_PlanDeMaintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de maintenance</label>
    <referenceTo>MaintenancePlan</referenceTo>
    <relationshipName>Nomenclatures_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>