force-app/main/default/objects/NomenclatureMaintenance__c/fields/NM_TypeDeTravail__c.field-meta.xml
<CustomField>
    <fullName>NM_TypeDeTravail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type de travail</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipName>Nomenclatures_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>