force-app/main/default/objects/NomenclatureMaintenance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NM_ContratDAssistanceTechnique__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NM_Equipement__c</columns>
    <columns>NM_PlanDeMaintenance__c</columns>
    <columns>NM_TypeDeTravail__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>